--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 .DS_Store
-
+.STEPS
 # Logs
 logs
 *.log
@@ -39,6 +39,7 @@ bower_components
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
+build/contracts
 
 # Dependency directories
 node_modules/
