--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "ganache": "ganache-cli -d"
-    
+    "ganache": "ganache-cli -d",
+    "start" : "npx http-server "
   },
   "repository": {
     "type": "git",
@@ -24,5 +24,8 @@
     "ganache-cli": "^6.12.2",
     "mocha": "^9.1.3",
     "truffle": "^5.4.18"
+  },
+  "dependencies": {
+    "http-server": "^14.0.0"
   }
 }
