--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "## Concept Most NFTs have value because they are supposedly scarce. However, most of this scarcity is artifically induced. For example, there are only 10,000 CryptoPunks, but there is nothing special about 10,000. The limit could have easily been set at 20,000, 50,000 or even 100,000.",
   "main": "index.js",
+  "engines": {
+    "node": "17.x"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "ganache": "ganache-cli -d",
