--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "17.x"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "truffle test",
     "ganache": "ganache-cli -d",
     "start": "npx http-server client",
     "heroku": "git push heroku main"
