--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "truffle test",
-    "ganache": "ganache-cli -d",
+    "ganache": "ganache-cli -d --port 8545",
     "start": "npx http-server client",
     "heroku": "git push heroku main"
   },
@@ -26,6 +26,7 @@
     "@openzeppelin/contracts": "^4.3.2",
     "@truffle/hdwallet-provider": "^1.7.0",
     "chai": "^4.3.4",
+    "dotenv": "^10.0.0",
     "ganache-cli": "^6.12.2",
     "mocha": "^9.1.3",
     "truffle": "^5.4.18"
