Add smart contract address and abi

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 MNEMONIC=payment mushroom trim regular august camp despair kitten hotel impact champion paddle
 INFURAAPIKEY=00000000000000000000000000000000
-             
+ETHERSCANAPIKEY=0000000000000000000000000000000000
+                
