--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "dotenv": "^10.0.0",
     "ganache-cli": "^6.12.2",
     "mocha": "^9.1.3",
-    "truffle": "^5.4.18"
+    "truffle": "^5.4.18",
+    "truffle-plugin-verify": "^0.5.18"
   },
   "dependencies": {
     "http-server": "^14.0.0"
