--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "blockchain-developer-bootcamp-final-project",
   "version": "1.0.0",
-  "description": "## Concept Most NFTs have value because they are supposedly scarce. However, most of this scarcity is artifically induced. For example, there are only 10,000 CryptoPunks, but there is nothing special about 10,000. The limit could have easily been set at 20,000, 50,000 or even 100,000.",
+  "description": "## Make use of the blockchain in order to have a lucky draw system where winners are picked by the blockchain and the operator cannot control the winners or draw multiple times.",
   "main": "index.js",
   "engines": {
     "node": "17.x"
